deploy/catalog/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
