deploy/catalog/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: catalog
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: catalog-dev
    weight: 100
  wildcardPolicy: None
